# canvas-control

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: cli-reference.md  configuration.md  guides.md
downloads/.canvasctl-runs/: 20260207T071730Z.json  20260207T072416Z.json  20260207T072518Z.json  20260207T072942Z.json
downloads/msds-630-1631774/: .canvasctl-manifest.json
downloads/msds-630-1631774/course files/1. Dimension Reduction/: 1_pca_birds.ipynb  1_svd_img_compression.ipynb
downloads/msds-630-1631774/course files/3. PyTorch/: 3_MF_with_pytorch.ipynb  3_intro_to_pytorch.ipynb
downloads/msds-630-1631774/course files/4. Neural Networks/: 5_empty_grad_boosting_for_nns.ipynb  5_grad_boosting_for_nns.ipynb
downloads/msds-630-1631774/course files/5. Boosting/: 4_empty-mse-boosting-example.ipynb  4_regression-mse-boosting-example.ipynb
downloads/msds-630-1631774/course files/Data/: birds_weekly.csv  oly_medal_counts.csv
downloads/msds-697-01-1631791/: .canvasctl-manifest.json
scripts/: README.md  canvas-health-check.py
src/canvasctl/: __init__.py  __main__.py  auth.py  canvas_api.py  cli.py  config.py  course_cache.py  courses.py  downloader.py  grades.py  interactive.py  manifest.py  mcp_server.py  onboard.py  sources.py
tests/: test_auth.py  test_canvas_api.py  test_canvas_api_new_methods.py  test_cli_assignments.py  test_cli_cache.py  test_cli_config.py  test_cli_courses.py  test_cli_download.py  test_cli_grades.py  test_cli_onboard.py  test_cli_rooms.py  test_cli_test.py  test_config.py  test_course_cache.py  test_downloader.py  test_grades.py  test_live_smoke.py  test_manifest.py  test_mcp_server.py  test_sources.py
(+12 files in other folders)
