[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "canvas-control"
version = "0.1.0"
description = "Canvas LMS CLI for listing courses and downloading course files"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "canvas-control contributors" }]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "platformdirs>=4.2.0,<5.0.0",
  "questionary>=2.0.1,<3.0.0",
  "rich>=13.7.1,<14.0.0",
  "tomli-w>=1.0.0,<2.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "respx>=0.21.1,<1.0.0",
]

[project.scripts]
cvsctl = "canvasctl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canvasctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: marks tests that hit a real Canvas instance",
]
